further sizing and alignment corrections on projects page

--- a/portfolio/src/components/projects/index.css
+++ b/portfolio/src/components/projects/index.css
@@ -19,6 +19,10 @@
     font-size: 32px !important;
 }
 
+.projects p {
+    width: 85%;
+}
+
 .project-2 p {
     text-align: left;
 }
@@ -44,9 +48,9 @@
 
 .project-image-container,
 .project-image-container-mid {
-    background: #FFF;
+    background: #000;
     border-radius: 10px;
-    opacity: 0.4;
+    opacity: 0.3;
     transition: opacity 1s;
 }
 
@@ -55,10 +59,17 @@
     opacity: 1;
 }
 
+.project-image-div {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+
 .project-image-container,
 .project-image-container-mid {
     height: 100%;
-    width: 50%;
+    width: 100%;
 }
 
 .project-image {
@@ -67,8 +78,8 @@
 }
 
 .project-info {
-    height: 100%;
-    width: 45%;
+    height: 375px;
+    width: 50%;
     display: flex; 
     flex-direction: column;
     justify-content: space-around;
